--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbvm (0.0.46-2) karmic; urgency=low
+
+  * Removed rbvm data directories from dirs so that VMs aren't destroyed unless purging.
+
+ -- Andrew Martin <werdz@ceilingcat>  Fri, 19 Feb 2010 10:58:21 +0000
+
 rbvm (0.0.46-1) unstable; urgency=low
 
   * Initial release
