--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-rbvm (0.0.46-2) karmic; urgency=low
+rbvm (0.0.46-2) stable; urgency=low
 
   * Removed rbvm data directories from dirs so that VMs aren't destroyed unless purging.
 
- -- Andrew Martin <werdz@ceilingcat>  Fri, 19 Feb 2010 10:58:21 +0000
+ -- Andrew Martin <werdz@redbrick.dcu.ie>  Fri, 19 Feb 2010 10:58:21 +0000
 
-rbvm (0.0.46-1) unstable; urgency=low
+rbvm (0.0.46-1) stable; urgency=low
 
   * Initial release
 
