--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+rbvm (0.0.46-5) stable; urgency=low
+
+  * Added SIGHUP trap.
+
+ -- Andrew Martin <werdz@redbrick.dcu.ie>  Fri, 19 Feb 2010 12:14:03 +0000
+
+rbvm (0.0.46-4) stable; urgency=low
+
+  * Typo fix.
+
+ -- Andrew Martin <werdz@ceilingcat>  Fri, 19 Feb 2010 11:40:17 +0000
+
+rbvm (0.0.46-3) stable; urgency=low
+
+  * Added sleep timer and retries to PT open calls.
+
+ -- Andrew Martin <werdz@redbrick.dcu.ie>  Fri, 19 Feb 2010 11:28:28 +0000
+
 rbvm (0.0.46-2) stable; urgency=low
 
   * Removed rbvm data directories from dirs so that VMs aren't destroyed unless purging.
