--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+rbvm (0.0.66-1) stable; urgency=low
+
+  * Added privilege checking to utility scripts.
+  * Added extra information columns to VM list screen.
+
+ -- Andrew Martin <werdz@redbrick.dcu.ie>  Tue, 02 Mar 2010 01:00:41 +0000
+
 rbvm (0.0.61-4) stable; urgency=low
 
   * Typo :( 
